--- a/index.html
+++ b/index.html
@@ -78,21 +78,36 @@
       <h2 class="text-center mb-5">My Projects</h2>
       <div class="row g-2">
         <div class="col-md-4">
-          <div class="project-card">
-            <img src="./Images/Screenshot 2024-12-29 144819.png" alt="cyber" />
-            <h3>Cyber</h3>
-            <p>A Phone selling website developed by using Next JS</p>
-          </div>
+          <a
+            href="https://iskocyber.netlify.app/"
+            class="project-link"
+            target="_blank"
+          >
+            <div class="project-card">
+              <img
+                src="./Images/Screenshot 2024-12-29 144819.png"
+                alt="cyber"
+              />
+              <h3>Cyber</h3>
+              <p>A Phone selling website developed by using Next JS</p>
+            </div>
+          </a>
         </div>
         <div class="col-md-4">
-          <div class="project-card">
-            <img
-              src="./Images/Screenshot 2024-12-29 145829.png"
-              alt="shopery"
-            />
-            <h3>Shopery</h3>
-            <p>An e-commerce platform with modern UI and advanced features</p>
-          </div>
+          <a
+            href="https://iskoshopery.netlify.app/"
+            class="project-link"
+            target="_blank"
+          >
+            <div class="project-card">
+              <img
+                src="./Images/Screenshot 2024-12-29 145829.png"
+                alt="shopery"
+              />
+              <h3>Shopery</h3>
+              <p>An e-commerce platform with modern UI and advanced features</p>
+            </div>
+          </a>
         </div>
         <div class="col-md-4">
           <a
@@ -154,11 +169,7 @@
         </div>
         <div class="col-md-6">
           <h3>Send a Message</h3>
-          <form
-            action="mailto:theazeisko2003@gmail.com"
-            method="post"
-            enctype="text/plain"
-          >
+          <form action="mailto:theazeisko2003@gmail.com" method="post">
             <div class="mb-3">
               <label for="name" class="form-label">Your Name</label>
               <input
