--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-container">
@@ -75,9 +79,9 @@
     </section>
 
     <section id="projects" class="container projects mb-5">
-      <h2 class="text-center mb-5">My Projects</h2>
+      <h2 class="text-center mb-5" data-aos="fade-up">My Projects</h2>
       <div class="row g-2">
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="zoom-in">
           <a
             href="https://iskocyber.netlify.app/"
             class="project-link"
@@ -93,7 +97,7 @@
             </div>
           </a>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="zoom-in">
           <a
             href="https://iskoshopery.netlify.app/"
             class="project-link"
@@ -109,7 +113,7 @@
             </div>
           </a>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="zoom-in">
           <a
             href="https://netfilms-two-inky.vercel.app/"
             class="project-link"
@@ -128,16 +132,16 @@
       </div>
     </section>
     <h2 class="text-center mb-5">About Me</h2>
-    <section id="about" class="container info">
+    <section id="about" class="container info" data-aos="fade-up">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6" data-aos="zoom-in">
           <img
             src="./Images/IMG-20231016-WA0001.jpg"
             alt="Ismayil"
             class="img-fluid rounded my-img"
           />
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" data-aos="zoom-in">
           <p>
             Hi, I'm Ismayil, a passionate web developer with experience in
             building responsive and dynamic web applications. I specialize in
@@ -156,10 +160,10 @@
       </div>
     </section>
 
-    <section id="contact" class="container contact mb-5">
+    <section id="contact" class="container contact mb-5" data-aos="fade-up">
       <h2 class="text-center mb-5">Get in Touch</h2>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6" data-aos="zoom-in">
           <h3>Contact Info</h3>
           <ul class="list-unstyled">
             <li><strong>Email:</strong> theazeisko2003@gmail.com</li>
@@ -167,7 +171,7 @@
             <li><strong>Location:</strong> Baku, Azerbaijan</li>
           </ul>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" data-aos="zoom-in">
           <h3>Send a Message</h3>
           <form action="mailto:theazeisko2003@gmail.com" method="post">
             <div class="mb-3">
@@ -206,7 +210,10 @@
       </div>
     </section>
 
+    <button id="scrollToTop" class="scroll-to-top">↑</button>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="./app.js"></script>
   </body>
 </html>
