--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       </div>
     </section>
     <h2 class="text-center mb-5">About Me</h2>
-    <section id="about" class="container info" data-aos="fade-up">
+    <section id="about" class="container" data-aos="fade-up">
       <div class="row">
         <div class="col-md-6" data-aos="zoom-in">
           <img
