--- a/index.html
+++ b/index.html
@@ -47,13 +47,15 @@
             </li>
           </ul>
           <div class="social-icons d-flex me-5">
-            <a href="https://www.linkedin.com/in/ismayil-isko2003/"
+            <a
+              href="https://www.linkedin.com/in/ismayil-isko2003/"
+              target="_blank"
               ><i class="fa-brands fa-linkedin-in"></i
             ></a>
-            <a href="https://github.com/Isko2003"
+            <a href="https://github.com/Isko2003" target="_blank"
               ><i class="fa-brands fa-github"></i
             ></a>
-            <a href="https://www.instagram.com/smaylovh"
+            <a href="https://www.instagram.com/smaylovh" target="_blank"
               ><i class="fa-brands fa-instagram"></i
             ></a>
           </div>
